--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,9 @@
 [submodule "bundle/linuxsty.vim"]
 	path = bundle/linuxsty.vim
 	url = https://github.com/vivien/vim-linux-coding-style.git
+[submodule "bundle/vim-javascript-syntax"]
+  path = bundle/vim-javascript-syntax
+  url = https://github.com/jelera/vim-javascript-syntax.git
+[submodule "bundle/syntastic"]
+  path = bundle/vim-syntastic
+  url = https://github.com/vim-syntastic/syntastic.git
