--- a/.gitmodules
+++ b/.gitmodules
@@ -80,8 +80,8 @@
 	path = bundle/linuxsty.vim
 	url = https://github.com/vivien/vim-linux-coding-style.git
 [submodule "bundle/vim-javascript-syntax"]
-  path = bundle/vim-javascript-syntax
-  url = https://github.com/jelera/vim-javascript-syntax.git
+	path = bundle/vim-javascript-syntax
+	url = https://github.com/jelera/vim-javascript-syntax
 [submodule "bundle/syntastic"]
 	path = bundle/syntastic
 	url = https://github.com/vim-syntastic/syntastic
@@ -94,3 +94,6 @@
 [submodule "bundle/tagbar"]
 	path = bundle/tagbar
 	url = https://github.com/majutsushi/tagbar
+[submodule "bundle/supertab"]
+	path = bundle/supertab
+	url = https://github.com/ervandew/supertab
