--- a/.gitmodules
+++ b/.gitmodules
@@ -48,7 +48,7 @@
 	url = https://github.com/moll/vim-bbye.git
 [submodule "bundle/vim-sayonara"]
 	path = bundle/vim-sayonara
-	url = https://github.com/mhinz/vim-sayonara.git
+	url = https://github.com/mhinz/vim-sayonara
 [submodule "bundle/vim-gitgutter"]
 	path = bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
