--- a/.gitmodules
+++ b/.gitmodules
@@ -115,3 +115,6 @@
 [submodule "bundle/vim-markdown"]
 	path = bundle/vim-markdown
 	url = https://github.com/plasticboy/vim-markdown
+[submodule "bundle/vim-csv"]
+	path = bundle/vim-csv
+	url = https://github.com/chrisbra/csv.vim
