--- a/.gitmodules
+++ b/.gitmodules
@@ -118,3 +118,6 @@
 [submodule "bundle/vim-csv"]
 	path = bundle/vim-csv
 	url = https://github.com/chrisbra/csv.vim
+[submodule "bundle/vim-deoplete"]
+	path = bundle/vim-deoplete
+	url = https://github.com/Shougo/deoplete.nvim.git
