--- a/coc-settings.json
+++ b/coc-settings.json
@@ -6,5 +6,8 @@
       "trace.server": "verbose",
       "filetypes": ["go"]
     }
-  }
+  },
+  "python.jediEnabled": false,
+  "python.linting.enabled": true,
+  "python.linting.pylintEnabled": false
 }
