--- a/.gitmodules
+++ b/.gitmodules
@@ -128,3 +128,12 @@
 [submodule "bundle/python-mode"]
 	path = bundle/python-mode
 	url = https://github.com/python-mode/python-mode.git
+[submodule "bundle/vim-jsx-pretty"]
+	path = bundle/vim-jsx-pretty
+	url = https://github.com/MaxMEllon/vim-jsx-pretty
+[submodule "bundle/vim-jsx-typescript"]
+	path = bundle/vim-jsx-typescript
+	url = https://github.com/peitalin/vim-jsx-typescript
+[submodule "bundle/haproxy"]
+	path = bundle/haproxy
+	url = https://github.com/vim-scripts/haproxy
