--- a/.gitmodules
+++ b/.gitmodules
@@ -1,17 +1,17 @@
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
-    url = https://github.com/scrooloose/nerdtree.git
+	url = https://github.com/scrooloose/nerdtree.git
 [submodule "bundle/tabular"]
 	path = bundle/tabular
-    url = https://github.com/godlygeek/tabular.git
+	url = https://github.com/godlygeek/tabular.git
 [submodule "bundle/vim-fugitive"]
 	path = bundle/vim-fugitive
-    url = https://github.com/tpope/vim-fugitive.git
+	url = https://github.com/tpope/vim-fugitive.git
 [submodule "bundle/vim-less"]
 	path = bundle/vim-less
-    url = https://github.com/groenewege/vim-less.git
+	url = https://github.com/groenewege/vim-less.git
 [submodule "bundle/vim-indent-lines"]
-    path = bundle/vim-indent-lines
+	path = bundle/vim-indent-lines
 	url = https://github.com/Yggdroot/indentLine.git
 [submodule "bundle/vim-go"]
 	path = bundle/vim-go
@@ -137,3 +137,21 @@
 [submodule "bundle/NeoSolarized.nvim"]
 	path = bundle/NeoSolarized.nvim
 	url = https://github.com/Tsuzat/NeoSolarized.nvim
+[submodule "bundle/CopilotChat.nvim"]
+	path = bundle/CopilotChat.nvim
+	url = https://github.com/CopilotC-Nvim/CopilotChat.nvim.git
+[submodule "bundle/copilot.vim"]
+	path = bundle/copilot.vim
+	url = https://github.com/github/copilot.vim.git
+[submodule "bundle/indentLine"]
+	path = bundle/indentLine
+	url = https://github.com/Yggdroot/indentLine.git
+[submodule "bundle/vim-colors-solarized"]
+	path = bundle/vim-colors-solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
+[submodule "pack/copilotchat/start/copilot.vim"]
+	path = pack/copilotchat/start/copilot.vim
+	url = https://github.com/github/copilot.vim
+[submodule "pack/copilotchat/start/plenary.nvim"]
+	path = pack/copilotchat/start/plenary.nvim
+	url = https://github.com/nvim-lua/plenary.nvim
